# entropy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  index.html  package.json  rust-toolchain.toml  world-state.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  EXAMPLES.md
engine/: config.js  entropy.js  history.js  package.json  reddit.js  run.js  twitter.js
scripts/: bench.sh  check.sh
solder-core/src/: discriminator.rs  lib.rs
solder-derive/src/: parse.rs
src/: error.rs  invoke.rs  lib.rs  program_ids.rs  system.rs
tests/: derive_tests.rs  integration.rs
