[package]
name = "anvil-cpi"
version = "0.1.0"
edition = "2021"
authors = ["anvil contributors"]
license = "MIT"
description = "Zero-dependency CPI helpers for Solana programs"
repository = "https://github.com/justedv/anvil"
keywords = ["solana", "cpi", "no-std", "blockchain", "zero-dependency"]
categories = ["no-std", "cryptography::cryptocurrencies"]

[features]
default = []
token-2022 = []

[lib]
crate-type = ["lib"]

[dependencies]
# None. That's the point.
